- fixed minor bugs - fixed contact butotn on mobile

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -6,10 +6,12 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 1rem;
 
   .btn-main {
     align-self: center;
   }
+}
 
+.form-container {
+  margin-bottom: 75px;
 }
